--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
     "next": "15.2.1",
+    "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "split-type": "^0.3.4"
@@ -20,6 +21,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
