--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.1",
     "gsap": "^3.12.7",
     "lenis": "^1.2.3",
+    "lucide": "^0.484.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.1",
     "nodemailer": "^6.10.0",
