--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "lenis": "^1.2.3",
     "lucide": "^0.484.0",
     "lucide-react": "^0.483.0",
-    "next": "15.2.1",
+    "next": "^15.4.4",
     "nodemailer": "^6.10.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
