--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-responsive": "^10.0.1",
     "split-type": "^0.3.4",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4",
